# SAT

./: .gitignore  README.md  af2_foldseek_result_small_uniprot_cache.pkl  pyproject.toml
.github/workflows/: main.yml  rich_codex.yml
sat/: __init__.py  sat.py
sat/dev/: dev_template.ipynb
sat/scripts/: __init__.py  add_taxonomy_to_alignments.py  add_uniprot_information_to_alignments.py  aln_add_clusters.py  aln_add_taxonomy.py  aln_add_uniprot.py  aln_cluster.py  aln_clusters.py  aln_connection_map.py  aln_ecod_purity.py  aln_expand_clusters.py  aln_filter.py  aln_generate_superclusters.py  aln_merge.py  aln_merge_clusters.py  aln_parse_dali.py  aln_parse_dali_matrix.py  aln_query_uniprot.py  aln_taxa_counts.py  chunk_fasta.py  cluster_taxa_counts.py  filter_alignments.py  get_domains.py  plot_pae.py  (+20 more)
tests/: test_add_taxonomy_to_alignments.py  test_add_uniprot_information_to_alignments.py  test_aln_add_clusters.py  test_aln_add_taxonomy.py  test_aln_add_uniprot.py  test_aln_clusters.py  test_aln_filter.py  test_aln_generate_superclusters.py  test_aln_merge.py  test_aln_merge_clusters.py  test_aln_query_uniprot.py  test_aln_taxa_counts.py  test_chunk_fasta.py  test_cluster_taxa_counts.py  test_ete3_taxonomy.py  test_filter_alignments.py  test_get_domains.py  test_process_clusters.py  test_query_uniprot.py  test_rebase_structure.py  test_remove_redundant_domains.py  test_sat.py  test_seq_multimerize.py  test_struc_detect_interaction.py  test_struc_disorder.py  test_struc_download.py  test_struc_get_domains.py  test_struc_rebase.py  test_struc_remove_redundant.py
(+37 files in other folders)
