[tool.poetry]
name = "SAT"
version = "0.1.0"
description = ""
authors = ["jnoms <jasonlnomburg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7"
flake8 = "^4.0.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
